--- a/package.json
+++ b/package.json
@@ -5,13 +5,21 @@
     "build": "umi build",
     "test": "umi test",
     "lint": "eslint {src,mock,tests}/**/*.{js,jsx} --fix",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "server": "nodemon ./server/index.js"
   },
   "dependencies": {
     "antd": "^3.19.5",
     "axios": "^0.19.2",
     "dva": "^2.6.0-beta.6",
+    "jsonwebtoken": "^8.5.1",
+    "koa": "^2.11.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-jwt": "^3.6.0",
+    "koa-router": "^8.0.7",
     "mockjs": "^1.1.0",
+    "moment": "^2.24.0",
+    "mongoose": "^5.8.12",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-transition-group": "^4.3.0"
