--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dva": "^2.6.0-beta.6",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
+    "koa-body": "^4.1.1",
     "koa-bodyparser": "^4.2.1",
     "koa-jwt": "^3.6.0",
     "koa-router": "^8.0.7",
