--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
     "koa-bodyparser": "^4.2.1",
+    "koa-compress": "^3.0.0",
     "koa-jwt": "^3.6.0",
+    "koa-mount": "^4.0.0",
     "koa-router": "^8.0.7",
     "mockjs": "^1.1.0",
     "moment": "^2.24.0",
     "mongoose": "^5.8.12",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-transition-group": "^4.3.0"
+    "react-transition-group": "^4.3.0",
+    "umi-server": "^1.2.2"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
