--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-transition-group": "^4.3.0",
-    "umi-server": "^1.2.2"
+    "umi-server": "^1.2.2",
+    "vanilla-lazyload": "^12.5.0"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
