--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "antd": "^3.19.5",
     "axios": "^0.19.2",
+    "draft-js": "^0.11.4",
     "dva": "^2.6.0-beta.6",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
@@ -25,6 +26,7 @@
     "mongoose": "^5.8.12",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-draft-wysiwyg": "^1.14.4",
     "react-transition-group": "^4.3.0",
     "umi-server": "^1.2.2",
     "vanilla-lazyload": "^12.5.0"
