消息双方收到

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "koa-jwt": "^3.6.0",
     "koa-mount": "^4.0.0",
     "koa-router": "^8.0.7",
+    "koa2-cors": "^2.0.6",
     "mockjs": "^1.1.0",
     "moment": "^2.24.0",
     "mongoose": "^5.8.12",
@@ -29,7 +30,9 @@
     "react-draft-wysiwyg": "^1.14.4",
     "react-transition-group": "^4.3.0",
     "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "umi-server": "^1.2.2",
+    "uws": "^100.0.1",
     "vanilla-lazyload": "^12.5.0"
   },
   "devDependencies": {
