--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
     "build": "umi build",
     "test": "umi test",
     "lint": "eslint {src,mock,tests}/**/*.{js,jsx} --fix",
-    "precommit": "lint-staged",
-    "server": "nodemon ./server/index.js",
-    "format": "eslint src/**/*.{jsx,js} --fix"
+    "server": "nodemon ./server/index.js"
   },
   "dependencies": {
     "antd": "^3.19.5",
@@ -49,6 +47,11 @@
     "react-test-renderer": "^16.7.0",
     "umi": "^2.7.7",
     "umi-plugin-react": "^1.8.4"
+  },
+  "husky":{
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "*.{js,jsx}": [
